# portfolio

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  style.css
.github/workflows/: deploy.yml
docs/superpowers/plans/: 2026-05-13-minimaliste-pixel-epure-redesign.md
docs/superpowers/specs/: 2026-05-13-minimaliste-pixel-epure-redesign.md
src/: App.tsx  main.rs  projects.json
src/components/: ArcadeMachine.module.css  ArcadeMachine.tsx  FloatingShapes.module.css  FloatingShapes.tsx  Footer.module.css  Footer.tsx  Hero.module.css  Hero.tsx  HeroLayer.module.css  HeroLayer.tsx  Navigation.module.css  ParallaxContainer.module.css  ParallaxContainer.tsx  ProjectCard.module.css  ProjectCard.tsx  ProjectLayer.module.css  ProjectLayer.tsx  ProjectsGrid.module.css  ProjectsGrid.tsx  hero.module.css  hero.rs  mod.rs  project_card.module.css  project_card.rs  projects_grid.module.css  projects_grid.rs
src/data/: projects.ts
src/hooks/: mod.rs  useInView.ts  useScrollProgress.ts
src/styles/: theme.css
