[package]
name = "xdm67x"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.19", features = ["csr"] }
leptos-use = "0.18.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
stylance = "0.5"
web-sys = { version = "0.3.98", features = ["Window"] }

[package.metadata.stylance]
folders = ["./src/"]
extensions = [".module.css"]
output_file = "./styles/bundle.css"
